// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Single place and single stats var 1`] = `
"<div class=\\"card\\"><span class=\\"chartPerCapita\\">Per capita<button class=\\"perCapitaCheckbox\\"></button><a href=\\"/faq#perCapita\\"><span> *</span></a></span>
  <div class=\\"chart-svg\\"><svg width=\\"500\\" height=\\"500\\"><text>svg text</text></svg></div>
  <div class=\\"statsVarChipRegion\\">
    <div class=\\"pv-chip mdl-chip--deletable\\"><span class=\\"mdl-chip__text\\">Median_Age_Person</span><button class=\\"mdl-chip__action\\"><i class=\\"material-icons\\">cancel</i></button></div>
  </div>
</div>"
`;

exports[`Single place and single stats var 2`] = `
"<div class=\\"card\\"><span class=\\"chartPerCapita\\">Per capita<button class=\\"perCapitaCheckbox\\"></button><a href=\\"/faq#perCapita\\"><span> *</span></a></span>
  <div class=\\"chart-svg\\"><svg width=\\"500\\" height=\\"500\\"><text>svg text</text></svg></div>
  <div class=\\"statsVarChipRegion\\">
    <div class=\\"pv-chip mdl-chip--deletable\\"><span class=\\"mdl-chip__text\\">Median_Age_Person</span><button class=\\"mdl-chip__action\\"><i class=\\"material-icons\\">cancel</i></button></div>
  </div>
</div>"
`;

exports[`Single place and single stats var 3`] = `
"<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-open\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">remove</i><span class=\\"title\\">Demographics</span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\">
    <div class=\\"svg-node-child\\">
      <div>
        <form class=\\"node-title\\"><label><input type=\\"checkbox\\"> Count Of Person</label></form>
      </div>
      <div>
        <form class=\\"node-title\\"><label><input type=\\"checkbox\\"> Median age of person</label></form>
      </div>
    </div>
    <div class=\\"svg-node-child\\">
      <div>
        <div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Age</span></div></span>
        <div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
          <div class=\\"Collapsible__contentInner\\"></div>
        </div>
      </div>
    </div>
    <div>
      <div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">ArmedForcesStatus</span></div></span>
      <div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
        <div class=\\"Collapsible__contentInner\\"></div>
      </div>
    </div>
  </div>
</div>
</div>
</div>
</div>
<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Economics</span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\"></div>
</div>
</div>"
`;

exports[`chart options 1`] = `
"<div class=\\"card\\"><span class=\\"chartPerCapita\\">Per capita<button class=\\"perCapitaCheckbox\\"></button><a href=\\"/faq#perCapita\\"><span> *</span></a></span>
  <div class=\\"chart-svg\\"><svg width=\\"500\\" height=\\"500\\"><text>svg text</text></svg></div>
  <div class=\\"statsVarChipRegion\\">
    <div class=\\"pv-chip mdl-chip--deletable\\"><span class=\\"mdl-chip__text\\">Median_Age_Person</span><button class=\\"mdl-chip__action\\"><i class=\\"material-icons\\">cancel</i></button></div>
  </div>
</div>"
`;

exports[`statsVar not in PV-tree 1`] = `
"<div class=\\"card\\"><span class=\\"chartPerCapita\\">Per capita<button class=\\"perCapitaCheckbox\\"></button><a href=\\"/faq#perCapita\\"><span> *</span></a></span>
  <div class=\\"chart-svg\\"></div>
  <div class=\\"statsVarChipRegion\\">
    <div class=\\"pv-chip mdl-chip--deletable\\"><span class=\\"mdl-chip__text\\">NotInTheTree</span><button class=\\"mdl-chip__action\\"><i class=\\"material-icons\\">cancel</i></button></div>
  </div>
</div>"
`;

exports[`statsVar not in PV-tree 2`] = `
"<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Demographics</span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\"></div>
</div>
</div>
<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Economics</span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\"></div>
</div>
</div>"
`;
